fixed paragrah and h2 spacing, changed font on name

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,23 @@
+@import url('https://fonts.googleapis.com/css?family=EB+Garamond|Felipa');
+
+
+body {
+  font-family: 'EB Garamond', serif;
+  font-size: 15px;
+}
+
+h1 {
+  font-family: 'Felipa', cursive;
+  font-size: 25px;
+  margin-bottom: 0px;
+}
+
+h2 {
+  font-size: 18px;
+  text-decoration: underline;
+  margin-bottom: 0px;
+}
+
 #top {
   background-color: teal;
   height: 50px;
@@ -9,15 +29,8 @@ hr {
   height: 1px;
 }
 
-@import url('https://fonts.googleapis.com/css?family=EB+Garamond|Felipa');
-
-body {
-  font-family: 'EB Garamond', serif;
-  font-size: 15px;
-}
-
 .container {
-  padding: 5px;
+  padding: 0px 100px;
   margin: 20px;
 }
 
@@ -25,13 +38,8 @@ body {
   text-align: center;
 }
 
-h1 {
-  font-size: 25px;
-}
-
-h2 {
-  font-size: 18px;
-  text-decoration: underline;
+p {
+  margin-top: 0px;
 }
 
 .position-date span {
